<!--
  This resource file maintains application strings. It is recommended that all strings
  intended to be displayed to the user be kept in this file. It is a best practice, as it
  allows strings to be maintained properly and allows the developer to specify translated files
  based on language settings.

  You may need to add strings to this file during your development.
  -->

<resources>
    <string name="app_name">CS328 Final Project</string>

    <string name="accelerometer_reading_format_string" formatted="false">X: %f Y: %f Z: %f </string>
    <string name="accelerometer_reading_initial">X: — Y: — Z: — </string>
    <string name="accelerometer_started">Accelerometer Started.</string>
    <string name="accelerometer_stopped">Accelerometer Stopped.</string>
    <string name="audio_started">Microphone Started.</string>
    <string name="audio_stopped">Microphone Stopped.</string>
    <string name="location_started">Location Started.</string>
    <string name="location_stopped">Location Stopped.</string>
    <string name="ppg_started">PPG Started.</string>
    <string name="ppg_stopped">PPG Stopped.</string>
    <string name="band_started">MS Band Service Started.</string>
    <string name="band_stopped">MS Band Service Stopped.</string>

    <string name="fall_detection_started">Fall Detection Started</string>
    <string name="fall_detection_ended">Fall Detection Stopped</string>
    <string name="fall_detection_vibration_started">Vibration Enabled</string>
    <string name="fall_detection_vibration_stopped">Vibration Disabled</string>
    <string name="fall_detection_ring_started">Ring Enabled</string>
    <string name="fall_detection_ring_ended">Ring Disabled</string>
    <string name="fall_detection_message_started">Messages Enabled</string>
    <string name="fall_detection_message_ended">Messages Disabled</string>
    <string name="text_switch_ring">Ring</string>
    <string name="text_switch_message">Messages</string>
    <string name="text_switch_vibration">Vibration</string>
    <string name="fall_detection_falling">Falling</string>
    <string name="fall_detection_not_falling">Not Falling</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phone_initial">xxx-xxx-xxxx</string>

    <string name="number">Number(In seconds)</string>
    <string name="duration">15</string>

    <string name="action_settings">Settings</string>

    <string name="android_step_count_initial">Android: 0</string>
    <string name="local_step_count_initial">Local: 0</string>
    <string name="server_step_count_initial">Server: 0</string>

    <string name="android_step_count" formatted="false">Android: %d</string>
    <string name="local_step_count" formatted="false">Local: %d</string>
    <string name="server_step_count" formatted="false">Server: %d</string>

    <string name="speaker" formatted="false">Speaker: %s</string>
    <string name="speaker_initial">Speaker: None</string>

    <string name="heart_rate_initial">0</string>
    <string name="activity_initial">Not Falling</string>

    <string name="app_package_identifier_prefix">package:</string>
    <string name="about_app_version">Version %s</string>

    <string name="text_switch_accelerometer">Accelerometer</string>
    <string name="text_switch_microphone">Microphone</string>
    <string name="text_switch_heart_rate">Photoplethysmography</string>
    <string name="text_switch_gps">Location</string>
    <string name="text_switch_fall_detection">Fall Detection</string>

    <string name="app_details">CS390MB : Mobile Health Sensing</string>

    <string-array name="labels_array">
        <item>Label</item>
        <item>0 - Jogging</item>
        <item>1 - Jumping</item>
        <item>2 - Walking</item>
        <item>3 - Sitting</item>
        <item>4 - Falling Forward</item>
        <item>5 - Sitting Down</item>
        <item>6 - Squating</item>
    </string-array>
</resources>