<?xml version="1.0" encoding="utf-8"?>
<!--
    *** ASSIGNMENTS: Data Collection, Step Detection, Activity Detection ***

    The exercise fragment will be used in the following assignments:

        Data Collection :       You will be required to update txtAccelerometerReading with
                                the current accelerometer values.

        Step Detection :        You will be required to update txtAndroidStepCount with the
                                step count computed by the Android built-in step detection
                                algorithm; txtLocalStepCount with the step count computed by
                                your local algorithm; and txtServerStepCount with the step
                                count computed by your server-side step detection algorithm.

        Activity Detection :    You will be required to display the current activity in the
                                exercise fragment. You may alternatively or additionally choose
                                to display an icon corresponding to the current activity, as
                                long as it is clear what the output of your algorithm is.

    You are not required to modify this file. You may make any changes to this file to suit
    your needs: You may customize your UI as little or as much as you please.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/background_steps">

    <TextView
        android:id="@+id/txtAccelerometerReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/ic_step_black" />

    <Switch
        android:id="@+id/switchFallDetection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtAccelerometerReading"
        android:layout_alignBottom="@+id/txtAccelerometerReading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/text_switch_fall_detection"
        android:textSize="24sp"
        android:textStyle="bold" />





        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_step_count">

            <Spinner
                android:id="@+id/spinner_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                />


        </LinearLayout>



    <TextView
        android:id="@+id/txtActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAccelerometerReading"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_toEndOf="@+id/txtAccelerometerReading"
        android:layout_toRightOf="@+id/txtAccelerometerReading"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity_initial"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switchVibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtActivity"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_switch_vibration"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switchVibration"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_switch_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/switch1" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch1"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_switch_ring"
        android:textSize="24sp"
        android:textStyle="bold" />

        <!--android:drawableStart="@drawable/ic_running_black_48dp"-->



</RelativeLayout>